TestCases/Errors/Haversine/observations/sst/spr_02_obs.spm
obs r6-c14 0.000378787878787879
obs r6-c15 0.00383827404479578
error_value r6-c14 0.2
error_value r6-c15 0.2
